After an evaluation, GNOME has moved from Bugzilla to GitLab. Learn more about GitLab.
No new issues can be reported in GNOME Bugzilla anymore.
To report an issue in a GNOME project, go to GNOME GitLab.
Do not go to GNOME Gitlab for: Bluefish, Doxygen, GnuCash, GStreamer, java-gnome, LDTP, NetworkManager, Tomboy.
Bug 130577 - .xls files with freezed pane created by gnumeric produce a warning when opened by XL
.xls files with freezed pane created by gnumeric produce a warning when opene...
Status: RESOLVED FIXED
Product: Gnumeric
Classification: Applications
Component: import/export MS Excel (tm)
1.2.x
Other Linux
: Normal normal
: ---
Assigned To: Jody Goldberg
Jody Goldberg
Depends on:
Blocks:
 
 
Reported: 2004-01-05 14:22 UTC by Frederic Parrenin
Modified: 2004-12-22 21:47 UTC
See Also:
GNOME target: ---
GNOME version: ---


Attachments
This is an example .xls file producing a warning in XL2k-french (6.50 KB, application/msexcel)
2004-01-05 14:23 UTC, Frederic Parrenin
Details

Description Frederic Parrenin 2004-01-05 14:22:19 UTC
.xls file with a freezed pane created with gnumeric-1.2.2 were causing XL
(french version) to crash.
With version 1.2.4, XL2k-french does not crash anymore, but displays a
warning saying something like:

"file error: risk of data loss"

I will attach a problematic .xls file.
Comment 1 Frederic Parrenin 2004-01-05 14:23:24 UTC
Created attachment 22935 [details]
This is an example .xls file producing a warning in XL2k-french
Comment 2 Jody Goldberg 2004-01-06 04:00:34 UTC
Fixed
patch will be in 1.2.5

This was the converse of the previous report