plugins/excel/ms-excel-read.c
@@ -3458,23 +3458,22 @@ excel_read_IMDATA (BiffQuery *q)
 static void
 excel_read_SELECTION (BiffQuery *q, ExcelReadSheet *esheet)
 {
-	/* FIXME : pane_number will be relevant for split panes.
-	 * because frozen panes are bound together this does not matter.
-	 */
-	/* int const pane_number	= GSF_LE_GET_GUINT8 (q->data); */
-
 	GnmCellPos edit_pos, tmp;
-	/* the range containing the edit_pos */
+	int const pane_number	= GSF_LE_GET_GUINT8 (q->data);
 	int i, j = GSF_LE_GET_GUINT16 (q->data + 5);
 	int num_refs = GSF_LE_GET_GUINT16 (q->data + 7);
 	guint8 *refs;
 	SheetView *sv = sheet_get_view (esheet->sheet, esheet->container.ewb->wbv);
 	GnmRange r;
 
+	/* pane 3 is the standard pane. I will need to look into the numbering
+	 * for split panes */
+	if (pane_number != 3)
+		return;
 	edit_pos.row = GSF_LE_GET_GUINT16 (q->data + 1);
 	edit_pos.col = GSF_LE_GET_GUINT16 (q->data + 3);
 
-	d (5, fprintf (stderr,"Start selection\n"););
+	d (5, fprintf (stderr,"Start selection in pane #%d\n", pane_number););
 	d (5, fprintf (stderr,"Cursor: %s in Ref #%d\n", cellpos_as_string (&edit_pos),
 		      j););
 
